--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% if jekyll.environment == "production" and site.google_analytics %}
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '{{ site.google_analytics }}');
+  </script>
+  {% endif %}
   <meta name="color-scheme" content="light dark">
   <meta name="theme-color" content="#9EDBC8">
   <title>{% if page.title %}{{ page.title }} · {% endif %}{{ site.title }}</title>
